[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/interface/action_menu.gd" type="Script" id=1]

[node name="ActionMenu" type="HBoxContainer"]
margin_left = 473.0
margin_top = 663.0
margin_right = 662.0
margin_bottom = 744.0
script = ExtResource( 1 )

[node name="Move" type="Button" parent="."]
margin_right = 52.0
margin_bottom = 81.0
toggle_mode = true
text = "Move"

[node name="Attack" type="Button" parent="."]
margin_left = 56.0
margin_right = 128.0
margin_bottom = 81.0
toggle_mode = true
text = "Attack"

[node name="Pass" type="Button" parent="."]
margin_left = 132.0
margin_right = 184.0
margin_bottom = 81.0
text = "Pass"

[connection signal="toggled" from="Move" to="." method="_on_Move_toggled"]
[connection signal="toggled" from="Attack" to="." method="_on_Attack_toggled"]
[connection signal="pressed" from="Pass" to="." method="_on_Pass_pressed"]
